# printf-rs

./: Cargo.toml  README.md
examples/: emoji.rs
src/: lib.rs
