[package]
name = "printf-rs"
version = "0.1.1"
description = "printf c language like"
homepage = "https://github.com/robatipoor/printf-rs"
keywords = ["clang", "print","format","printf"]
license = "MIT"
repository = "https://github.com/robatipoor/printf-rs"
authors = ["Mahdi Robatipoor <Mahdi.robatipoor@gmail.com>"]
documentation = "https://github.com/robatipoor/printf-rs"
readme = "README.md"
categories = ["print"]
edition = "2018"

[dependencies]
libc = "0.2.46"
lazy_static = "1.2.0"

[dev-dependencies]
rand = "0.6.4"